# struct-searcher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
data/processing/: atom_info.json
struct_searcher/: bin.py  data.py  fileio.py  struct.py  utils.py
struct_searcher/scripts/: main.py
tests/: conftest.py  test_fileio.py  test_struct.py  test_utils.py
tests/data/commands/: in.lammps
tests/data/commands/Al/: in.lammps  in_static.lammps
tests/data/commands/Ti/: in.lammps  in_static.lammps
tests/data/commands/Ti2-Al7/: in.lammps
tests/data/commands/Ti4-Al6/: in.lammps
tests/data/commands/Ti7-Al4/: in.lammps  in_static.lammps
tests/data/job_scripts/001/: README.md
tests/data/logs/: log.lammps
tests/data/logs/02/: log.lammps
tests/data/logs/03/: log.lammps
tests/data/logs/04/: log.lammps
tests/data/potentials/: potential_id.json
tests/data/potentials/Al-Cu/gtinv-257/: mlp.lammps
tests/data/potentials/Na-Sn/gtinv-257/: mlp.lammps
tests/data/potentials/Ti-Al/gtinv-411/: mlp.lammps
tests/data/structures/: lammps_structure  lammps_structure.bak
tests/data/structures/Al/: lammps_structure
tests/data/structures/Ti/: lammps_structure
tests/data/structures/Ti3-Al1/: lammps_structure
tests/data/structures/Ti7-Al4/: lammps_structure
