[metadata]
name = struct_searcher
version = 1.1.0
author = Taiki Iwamura
author_email = takki.0206@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/t-iwamura/struct-searcher
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = struct_searcher
python_requires = >=3.9
